--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "license": "ISC",
   "dependencies": {
     "ejs": "1.0.0",
+    "fs-extra": "^0.9.1",
+    "lodash": "2.4.1",
     "path": "0.4.9"
   }
 }
